added description with instructions on making cupcakes. added list of ingredients for the recipe.

--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -5,9 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <h1>cupcakes</h1>
+    <h1>Cupcakes</h1>
 </head>
 <body>
-    
+    <img src="../recipes/vanillacupcakes.jpg"alt="Vanilla cupcakes">
+    <h2>Description</h2>
+    <p>To make cupcakes, first preheat the oven to 325°F. Then, place paper baking cups into a muffin pan. Afterwards, get a large bowl and mix flour, granulated sugar and salt using a whisk. Set that aside and get a saucepan (one-quart sized). Heat one cup of butter, water, and three tablespoons of baking cocoa to boiling. Remove the saucepan from the heat and pour it into the flour mixture before mixing them altogether. Add buttermilk, baking soda, vanilla, and eggs before mixing well. Then divide the batter evenly among the muffin cups (fill them two-thirds full). Put them in the oven and bake for 20 to 25 minutes.</p>
+    <p>To make the frosting, get a saucepan (one-quart sized) and heat butter, baking cocoa and milk to simmering. Afterwards, remove the saucepan from the heat and add in powdered sugar before beating. Spoon the warm icing over the cupcakes (after finished baking and cooling down).</p>
+    <h3>Ingredients</h3>
+    <p>
+        <b>Cupcakes</b>
+        <ul>2 cups all-purpose flour</ul>
+        <ul>2 cups granulated sugar</ul>
+        <ul>1/4 teaspoon salt</ul>
+        <ul>1 cup unsalted butter</ul>
+        <ul>1 cup water</ul>
+        <ul>3 tablespoons unsweetened baking cocoa</ul>
+        <ul>1/2 cup buttermilk</ul>
+        <ul>1 teaspoon baking soda</ul>
+        <ul>1 teaspoon vanilla</ul>
+        <ul>2 eggs (beaten)</ul>
+
+        <b>Icing/Frosting</b>
+        <ul>1/2 cup unsalted butter</ul>
+        <ul>3 tablespoons unsweetened baking cocoa</ul>
+        <ul>6 tablespoons milk</ul>
+        <ul>2 1/2 cups powdered sugar</ul>
+        
+        <b>Equipment</b>
+        <ul>large bowl</ul>
+        <ul>regular-size muffin pan(12 count)</ul>
+        <ul>paper baking cups</ul>
+        <ul>one-quart sauce pan</ul>
+    </p>
 </body>
 </html>
