--- a/recipes/cupcakes.html
+++ b/recipes/cupcakes.html
@@ -10,33 +10,61 @@
 <body>
     <img src="../recipes/vanillacupcakes.jpg"alt="Vanilla cupcakes">
     <h2>Description</h2>
-    <p>To make cupcakes, first preheat the oven to 325°F. Then, place paper baking cups into a muffin pan. Afterwards, get a large bowl and mix flour, granulated sugar and salt using a whisk. Set that aside and get a saucepan (one-quart sized). Heat one cup of butter, water, and three tablespoons of baking cocoa to boiling. Remove the saucepan from the heat and pour it into the flour mixture before mixing them altogether. Add buttermilk, baking soda, vanilla, and eggs before mixing well. Then divide the batter evenly among the muffin cups (fill them two-thirds full). Put them in the oven and bake for 20 to 25 minutes.</p>
-    <p>To make the frosting, get a saucepan (one-quart sized) and heat butter, baking cocoa and milk to simmering. Afterwards, remove the saucepan from the heat and add in powdered sugar before beating. Spoon the warm icing over the cupcakes (after finished baking and cooling down).</p>
+    <p>Here is a recipe on how to make vanilla cupcakes (along with instructions on how to make cupcake frosting).</p>
     <h3>Ingredients</h3>
     <p>
         <b>Cupcakes</b>
-        <ul>2 cups all-purpose flour</ul>
-        <ul>2 cups granulated sugar</ul>
-        <ul>1/4 teaspoon salt</ul>
-        <ul>1 cup unsalted butter</ul>
-        <ul>1 cup water</ul>
-        <ul>3 tablespoons unsweetened baking cocoa</ul>
-        <ul>1/2 cup buttermilk</ul>
-        <ul>1 teaspoon baking soda</ul>
-        <ul>1 teaspoon vanilla</ul>
-        <ul>2 eggs (beaten)</ul>
+        <ul>
+            <li>2 cups all-purpose flour</li>
+            <li>2 cups granulated sugar</li>
+            <li>1/4 teaspoon salt</li>
+            <li>1 cup unsalted butter</li>
+            <li>1 cup water</li>
+            <li>1/2 cup buttermilk</li>
+            <li>1 teaspoon baking soda</li>
+            <li>1 teaspoon vanilla</li>
+            <li>2 eggs (beaten)</li>
+        </ul>
 
         <b>Icing/Frosting</b>
-        <ul>1/2 cup unsalted butter</ul>
-        <ul>3 tablespoons unsweetened baking cocoa</ul>
-        <ul>6 tablespoons milk</ul>
-        <ul>2 1/2 cups powdered sugar</ul>
-        
+        <ul>
+            <li>1/2 cup unsalted butter</li>
+            <li>6 tablespoons milk</li>
+            <li>2 1/2 cups powdered sugar</li>
+            <li>1 teaspoon vanilla</li>
+        </ul>
+
         <b>Equipment</b>
-        <ul>large bowl</ul>
-        <ul>regular-size muffin pan(12 count)</ul>
-        <ul>paper baking cups</ul>
-        <ul>one-quart sauce pan</ul>
+        <ul>
+            <li>large bowl</li>
+            <li>regular-size muffin pan(12 count)</li>
+            <li>paper baking cups</li>
+            <li>one-quart sauce pan</li>
+        </ul>
+    </p>
+    <h4>Steps</h4>
+    <p>
+        <b>To make cupcakes</b>
+
+        <ol>
+            <li>preheat the oven to 325°F</li>
+            <li>place paper baking cups into muffin pan</li>
+            <li>get a large bowl and mix flour, granulated sugar and salt using a whisk</li>
+            <li>Set that asid and get a saucepan (one-quart sized)</li>
+            <li>Heat one cup of butter and water to boiling</li>
+            <li>Remove the saucepan from the heat and pour it into the flour mixture before mixing them altogether</li>
+            <li>Add buttermilk, baking soda, vanilla, and eggs before mixing well</li>
+            <li>Then divide the batter evenly among the muffin cups (fill them two-thirds full)</li>
+            <li>Put them in the oven and bake for 20 to 25 minutes</li>
+    </p>
+    <p>
+        <b>To make frosting:</b>
+
+        <ol>
+            <li>get a saucepan (one-quart sized) and heat butter and milk to simmering</li>
+            <li>remove the saucepan from the heat and add in powdered sugar before beating</li>
+            <li>Spoon the warm icing over the cupcakes (after finished baking and cooling down)</li>
+        </ol>
     </p>
 </body>
 </html>
