--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <h1>Odin Recipes</h1>
 </head>
 <body>
-    <a href="./recipes/cupcakes.html">Cupcakes</a>
+    <ul>
+        <li><a href="./recipes/cupcakes.html">Cupcakes</a></li>
+        <li><a href="./recipes/pizza.html">Pizza</a></li>
+    </ul>
 </body>
 </html>
