adjusted image for pizza recipe

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
     <h1>Pepperoni Pizza</h1>
 </head>
 <body>
-    <img src="../recipes/vanillacupcakes.jpg"alt="Vanilla cupcakes">
+    <img src="../recipes/pepperonipizza.jpg"alt="Pepperoni pizza">
     <h2>Description</h2>
     <p>Here is a recipe on how to make pizza.</p>
     <h3>Ingredients</h3>
