adjusted recipe images and added new recipe: milkeshake

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -31,20 +31,21 @@
         <b>Steps</b>
         <p>
             <b>To make pizza saue:</b>
-
-            <ol>Combine tomato sauce, onion powder, garlic powder, dried & crushed basil, salt and sugar into a medium bowl</ol>
-            <ol>Fill the bowl with 1/2 cup of water.</ol>
-            <ol>Set aside for flavors to develop</ol>
-
-            <b>To make pizza crust:</b>
-
-            <ol>Combine 2 cups of flour with dry yeast, sugar & salt.</ol>
-            <ol>Add water & oil and mix until blended well for 1 minute</ol>
-            <ol>Gradually add flour slowly until a soft and sticky dough ball forms</ol>
-            <ol>Knead the dough for 4 minutes on a floured surface until the dough is smooth and elastic</ol>
-            <ol>Divide the dough in half & pat into greased pizza pan</ol>
-            <ol>Preheat the oven to 425 degrees & top the crust with sauce, pepperoni & cheese.</ol>
-            <ol>Bake the pizza for 18 to 20 minutes until the crusts are browned & cheese is melted.</ol>
+            <ol>
+                <li>Combine tomato sauce, onion powder, garlic powder, dried & crushed basil, salt and sugar into a medium bowl</li>
+                <li>Fill the bowl with 1/2 cup of water.</li>
+                <li>Set aside for flavors to develop</li>
+    
+                <b>To make pizza crust:</b>
+    
+                <li>Combine 2 cups of flour with dry yeast, sugar & salt.</li>
+                <li>Add water & oil and mix until blended well for 1 minute</li>
+                <li>Gradually add flour slowly until a soft and sticky dough ball forms</li>
+                <li>Knead the dough for 4 minutes on a floured surface until the dough is smooth and elastic</li>
+                <li>Divide the dough in half & pat into greased pizza pan</oli>
+                <li>Preheat the oven to 425 degrees & top the crust with sauce, pepperoni & cheese.</li>
+                <li>Bake the pizza for 18 to 20 minutes until the crusts are browned & cheese is melted.</li>
+            </ol>
         </p>
     </p>
 </body>
