adjusted recipe images

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -22,7 +22,7 @@
             <li>garlic powder</li>
             <li>dried, crushed basil</li>
             <li>onion powder</li>
-            <li>sugar></li>
+            <li>sugar</li>
             <li>salt</li>
             <li>cooking oil</li>
             <li>dry yeast</li>
