--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="./recipes/cupcakes.html">Cupcakes</a></li>
         <li><a href="./recipes/pizza.html">Pizza</a></li>
+        <li><a href="./recipes/milkshake.html">Milkshake</a></li>
     </ul>
 </body>
 </html>
